--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ torch==2.6.0
 torchaudio==2.6.0
 torcheval==0.0.7
 torchmetrics==1.0.3
-torchrec==0.6.0+cu118
+torchrec==0.6.0
 torchsnapshot==0.1.0
 torchvision==0.21.0
 aiofiles==24.1.0
@@ -20,12 +20,12 @@ charset-normalizer==3.3.2
 click==8.3.0
 datasets==4.2.0
 decorator==5.1.1
-deepspeed==0.18.0
+#deepspeed==0.18.0
 dill==0.4.0
 distro==1.9.0
 einops==0.8.0
 executing==2.0.1
-fbgemm_gpu==0.8.0+cu118
+#fbgemm_gpu==0.8.0
 filelock==3.13.1
 fire==0.7.1
 flatbuffers==1.12
